@@ -445,6 +445,9 @@ sessionCookie.name=
 # If left blank the session cookie can only be used for the domain that you login at.
 sessionCookie.domain=
 
-# Controls the poll period for collecting (some) internal metrics
+# Controls the poll period for collecting internal metrics
 internal.monitor.pollPeriod=10000
+# Controls the poll period for collecting disk usage
 internal.monitor.diskUsage.pollPeriod=1200000
+# Should MA_HOME and each file store directory be monitored individually in addition to the partitions?
+internal.monitor.diskUsage.monitorDirectories=false
