@@ -39,6 +39,8 @@
 * Add internal metrics monitoring for sql partition total and usable space
 * Add internal metrics monitoring for filestore partition total and usable space
 * Add internal metrics monitoring for all file stores disk usage
+* Add env property internal.monitor.diskUsage.pollPeriod to control how often to check disk usage defaults to 2 minutes
+* Add env property internal.monitor.diskUsage.monitorDirectories to control monitoring ma home and file store directory sizes, by default this is disabled
 * Change Mango java script to append a newline to wrapped scripts before the execution suffix to allow for the last line of a script ending in a comment
 * Infer http to https redirect port from publicly resolvable URL system setting, default to ssl.port if setting is empty or non https url
 * Upgrade Jetty to 9.4.22.v20191022
